@@ -1,1 +1,0 @@
-<?xml version="1.0" encoding="utf-8"?><project>	<app main="ze.Main" file="Game" />	<window width="800" height="800" fps="30" background="0x000000" />		<source path="ze" />		<haxelib name="openfl" /></project>
