@@ -1,1 +1,1 @@
-<?xml version="1.0" encoding="utf-8"?><project>	<app main="Main" file="Game" swf-version="11.8" />	<window width="1280" height="800" fps="30" background="0xFFFFFF" />		<source path="src" />		<haxelib name="openfl" />	<haxelib name="ze2d" />		<assets path="assets/atlas" rename="atlas"/>	<assets path="assets/gfx" rename="gfx" />	<assets path="assets/sfx" rename="sfx" />	<assets path="assets/level" rename="level" /></project>
+<?xml version="1.0" encoding="utf-8"?><project>	<app main="Main" file="Game" />	<window width="1280" height="800" fps="30" background="0xFFFFFF" />		<source path="src" />		<haxelib name="openfl" />	<haxelib name="ze2d" />		<assets path="assets/atlas" rename="atlas"/>	<assets path="assets/gfx" rename="gfx" />	<assets path="assets/sfx" rename="sfx" />	<assets path="assets/level" rename="level" /></project>
