@@ -15,22 +15,22 @@
   </output>
   <!-- Other classes to be compiled into your SWF -->
   <classpaths>
+    <class path="C:\HaxeToolkit\haxe\lib\openfl\2,0,0" />
     <class path="C:\HaxeToolkit\haxe\lib\ze2d\git" />
     <class path="C:\HaxeToolkit\haxe\lib\lime\1,0,0" />
-    <class path="C:\HaxeToolkit\haxe\lib\lime-tools\1,5,4" />
-    <class path="C:\HaxeToolkit\haxe\lib\openfl\2,0,0" />
+    <class path="C:\HaxeToolkit\haxe\lib\lime-tools\1,5,6" />
     <class path="src" />
     <class path="C:\HaxeToolkit\haxe\lib\openfl\2,0,0\backends\flash" />
     <class path="bin\flash\haxe" />
   </classpaths>
   <!-- Build options -->
   <build>
-    <option directives="ze2d=0.3.0&#xA;lime=1.0.0&#xA;lime-tools=1.5.4&#xA;openfl=2.0.0&#xA;tools=1.5.4&#xA;openfl-flash&#xA;display&#xA;web" />
+    <option directives="ze2d=0.3.1&#xA;lime=1.0.0&#xA;lime-tools=1.5.6&#xA;openfl=2.0.0&#xA;tools=1.5.6&#xA;openfl-flash&#xA;display&#xA;web" />
     <option flashStrict="True" />
     <option noInlineOnDebug="False" />
     <option mainClass="ApplicationMain" />
     <option enabledebug="True" />
-    <option additional="--no-output&#xA;-swf-version 11.8" />
+    <option additional="--no-output&#xA;-swf-version 11.2" />
   </build>
   <!-- haxelib libraries -->
   <haxelib>
