@@ -1,13 +1,0 @@
-<TextureAtlas imagePath="sprites.png">
-	<SubTexture type="font" name="Grobold" x="0" y="300" width="256" height="256" tileWidth="32" tileHeight="32" letters="$j?()W!MAVQGiXOC3SK69gY@ZDN02ROU48TJL%I/1&BHbdp5qFE7hkflyt+woxacvusrzmen=:;_,'&quot;&quot;-." />
-	<SubTexture type="single" name="Bullet" x="64" y="588" width="5" height="5"/>
-	<SubTexture type="single" name="Dialog" x="0" y="0" width="600" height="300"/>
-	<SubTexture type="single" name="HorizontalGate" x="253" y="556" width="64" height="32"/>
-	<SubTexture type="single" name="VerticalGate" x="512" y="300" width="32" height="64"/>
-	<SubTexture type="single" name="Player" x="128" y="569" width="16" height="16"/>
-	<SubTexture type="single" name="Sign" x="317" y="556" width="32" height="32"/>
-	<SubTexture type="multiple" name="Checker" x="256" y="300" width="256" height="256" tileWidth="32" tileHeight="32"/>
-	<SubTexture type="multiple" name="Exit" x="0" y="556" width="128" height="32" tileWidth="32" tileHeight="32"/>
-	<SubTexture type="multiple" name="Respawn" x="0" y="588" width="64" height="8" tileWidth="32" tileHeight="8"/>
-	<SubTexture type="multiple" name="Switch" x="128" y="556" width="125" height="13" tileWidth="25" tileHeight="13"/>
-</TextureAtlas>
