@@ -1,154 +1,0 @@
-<level width="800" height="800">
-  <Entities>
-    <Player id="0" x="40" y="744" />
-  </Entities>
-  <Tiles tileset="Tile" exportMode="XMLCoords">
-    <tile x="0" y="0" tx="4" ty="0" />
-    <tile x="0" y="1" tx="3" ty="1" />
-    <tile x="0" y="2" tx="3" ty="1" />
-    <tile x="0" y="3" tx="3" ty="1" />
-    <tile x="0" y="4" tx="3" ty="1" />
-    <tile x="0" y="5" tx="3" ty="1" />
-    <tile x="0" y="6" tx="3" ty="1" />
-    <tile x="0" y="7" tx="3" ty="1" />
-    <tile x="0" y="8" tx="3" ty="1" />
-    <tile x="0" y="9" tx="3" ty="1" />
-    <tile x="0" y="10" tx="3" ty="1" />
-    <tile x="0" y="11" tx="3" ty="1" />
-    <tile x="0" y="12" tx="3" ty="1" />
-    <tile x="0" y="13" tx="3" ty="1" />
-    <tile x="0" y="14" tx="3" ty="1" />
-    <tile x="0" y="15" tx="3" ty="1" />
-    <tile x="0" y="16" tx="3" ty="1" />
-    <tile x="0" y="17" tx="3" ty="1" />
-    <tile x="0" y="18" tx="3" ty="1" />
-    <tile x="0" y="19" tx="3" ty="1" />
-    <tile x="0" y="20" tx="3" ty="1" />
-    <tile x="0" y="21" tx="3" ty="1" />
-    <tile x="0" y="22" tx="3" ty="1" />
-    <tile x="0" y="23" tx="3" ty="1" />
-    <tile x="0" y="24" tx="4" ty="1" />
-    <tile x="1" y="0" tx="2" ty="1" />
-    <tile x="1" y="16" tx="1" ty="2" />
-    <tile x="1" y="17" tx="1" ty="2" />
-    <tile x="1" y="18" tx="1" ty="2" />
-    <tile x="1" y="19" tx="1" ty="2" />
-    <tile x="1" y="20" tx="1" ty="2" />
-    <tile x="1" y="21" tx="1" ty="2" />
-    <tile x="1" y="22" tx="1" ty="2" />
-    <tile x="1" y="24" tx="2" ty="0" />
-    <tile x="2" y="0" tx="2" ty="1" />
-    <tile x="2" y="16" tx="1" ty="2" />
-    <tile x="2" y="17" tx="1" ty="2" />
-    <tile x="2" y="18" tx="1" ty="2" />
-    <tile x="2" y="19" tx="1" ty="2" />
-    <tile x="2" y="20" tx="1" ty="2" />
-    <tile x="2" y="21" tx="1" ty="2" />
-    <tile x="2" y="24" tx="2" ty="0" />
-    <tile x="3" y="0" tx="2" ty="1" />
-    <tile x="3" y="16" tx="1" ty="2" />
-    <tile x="3" y="17" tx="1" ty="2" />
-    <tile x="3" y="18" tx="1" ty="2" />
-    <tile x="3" y="19" tx="1" ty="2" />
-    <tile x="3" y="20" tx="1" ty="2" />
-    <tile x="3" y="23" tx="1" ty="2" />
-    <tile x="3" y="24" tx="2" ty="0" />
-    <tile x="4" y="0" tx="2" ty="1" />
-    <tile x="4" y="16" tx="1" ty="2" />
-    <tile x="4" y="17" tx="1" ty="2" />
-    <tile x="4" y="18" tx="1" ty="2" />
-    <tile x="4" y="19" tx="1" ty="2" />
-    <tile x="4" y="22" tx="1" ty="2" />
-    <tile x="4" y="23" tx="1" ty="2" />
-    <tile x="4" y="24" tx="2" ty="0" />
-    <tile x="5" y="0" tx="2" ty="1" />
-    <tile x="5" y="16" tx="1" ty="2" />
-    <tile x="5" y="17" tx="1" ty="2" />
-    <tile x="5" y="18" tx="1" ty="2" />
-    <tile x="5" y="21" tx="1" ty="2" />
-    <tile x="5" y="22" tx="1" ty="2" />
-    <tile x="5" y="23" tx="1" ty="2" />
-    <tile x="5" y="24" tx="2" ty="0" />
-    <tile x="6" y="0" tx="2" ty="1" />
-    <tile x="6" y="16" tx="1" ty="2" />
-    <tile x="6" y="17" tx="1" ty="2" />
-    <tile x="6" y="20" tx="1" ty="2" />
-    <tile x="6" y="21" tx="1" ty="2" />
-    <tile x="6" y="22" tx="1" ty="2" />
-    <tile x="6" y="23" tx="1" ty="2" />
-    <tile x="6" y="24" tx="2" ty="0" />
-    <tile x="7" y="0" tx="2" ty="1" />
-    <tile x="7" y="16" tx="1" ty="2" />
-    <tile x="7" y="17" tx="1" ty="2" />
-    <tile x="7" y="19" tx="1" ty="2" />
-    <tile x="7" y="20" tx="1" ty="2" />
-    <tile x="7" y="21" tx="1" ty="2" />
-    <tile x="7" y="22" tx="1" ty="2" />
-    <tile x="7" y="23" tx="1" ty="2" />
-    <tile x="7" y="24" tx="2" ty="0" />
-    <tile x="8" y="0" tx="2" ty="1" />
-    <tile x="8" y="24" tx="2" ty="0" />
-    <tile x="9" y="0" tx="2" ty="1" />
-    <tile x="9" y="24" tx="2" ty="0" />
-    <tile x="10" y="0" tx="2" ty="1" />
-    <tile x="10" y="24" tx="2" ty="0" />
-    <tile x="11" y="0" tx="2" ty="1" />
-    <tile x="11" y="24" tx="2" ty="0" />
-    <tile x="12" y="0" tx="2" ty="1" />
-    <tile x="12" y="24" tx="2" ty="0" />
-    <tile x="13" y="0" tx="2" ty="1" />
-    <tile x="13" y="24" tx="2" ty="0" />
-    <tile x="14" y="0" tx="2" ty="1" />
-    <tile x="14" y="24" tx="2" ty="0" />
-    <tile x="15" y="0" tx="2" ty="1" />
-    <tile x="15" y="24" tx="2" ty="0" />
-    <tile x="16" y="0" tx="2" ty="1" />
-    <tile x="16" y="24" tx="2" ty="0" />
-    <tile x="17" y="0" tx="2" ty="1" />
-    <tile x="17" y="24" tx="2" ty="0" />
-    <tile x="18" y="0" tx="2" ty="1" />
-    <tile x="18" y="24" tx="2" ty="0" />
-    <tile x="19" y="0" tx="2" ty="1" />
-    <tile x="19" y="24" tx="2" ty="0" />
-    <tile x="20" y="0" tx="2" ty="1" />
-    <tile x="20" y="24" tx="2" ty="0" />
-    <tile x="21" y="0" tx="2" ty="1" />
-    <tile x="21" y="24" tx="2" ty="0" />
-    <tile x="22" y="0" tx="2" ty="1" />
-    <tile x="22" y="24" tx="2" ty="0" />
-    <tile x="23" y="0" tx="2" ty="1" />
-    <tile x="23" y="24" tx="2" ty="0" />
-    <tile x="24" y="0" tx="5" ty="0" />
-    <tile x="24" y="1" tx="3" ty="0" />
-    <tile x="24" y="2" tx="3" ty="0" />
-    <tile x="24" y="3" tx="3" ty="0" />
-    <tile x="24" y="4" tx="3" ty="0" />
-    <tile x="24" y="5" tx="3" ty="0" />
-    <tile x="24" y="6" tx="3" ty="0" />
-    <tile x="24" y="7" tx="3" ty="0" />
-    <tile x="24" y="8" tx="3" ty="0" />
-    <tile x="24" y="9" tx="3" ty="0" />
-    <tile x="24" y="10" tx="3" ty="0" />
-    <tile x="24" y="11" tx="3" ty="0" />
-    <tile x="24" y="12" tx="3" ty="0" />
-    <tile x="24" y="13" tx="3" ty="0" />
-    <tile x="24" y="14" tx="3" ty="0" />
-    <tile x="24" y="15" tx="3" ty="0" />
-    <tile x="24" y="16" tx="3" ty="0" />
-    <tile x="24" y="17" tx="3" ty="0" />
-    <tile x="24" y="18" tx="3" ty="0" />
-    <tile x="24" y="19" tx="3" ty="0" />
-    <tile x="24" y="20" tx="3" ty="0" />
-    <tile x="24" y="21" tx="3" ty="0" />
-    <tile x="24" y="22" tx="3" ty="0" />
-    <tile x="24" y="23" tx="3" ty="0" />
-    <tile x="24" y="24" tx="5" ty="1" />
-  </Tiles>
-  <Collision exportMode="Rectangles">
-    <rect x="0" y="0" w="800" h="32" />
-    <rect x="0" y="32" w="32" h="768" />
-    <rect x="32" y="768" w="768" h="32" />
-    <rect x="768" y="32" w="32" h="736" />
-  </Collision>
-  <Spikes exportMode="Rectangles" />
-</level>
