@@ -1,5 +1,4 @@
-package puzzle.prefab;
-
+package prefab;
 import ze.component.physics.BoxCollider;
 import ze.object.GameObject;
 
