@@ -1,15 +1,0 @@
-package ze;
-import ze.Engine;
-import ze.object.Scene;
-
-/**
- * ...
- * @author Goh Zi He
- */
-class Main
-{
-	public static function main()
-	{
-		new Engine(new Scene());
-	}
-}
